<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Information about student</string>
    <string name="reset_text">All fields reset</string>
    <string name="message_text">Please input your data</string>
    <string name="validation_not_complete_text">Not all fields are filled</string>
    <string name="name_label">Name:</string>
    <string name="phone_label">Phone:</string>
    <string name="email_label">E-mail:</string>
    <string name="adress_label">Adress:</string>
    <string name="confirm_button">Confirm</string>
    <string name="call_button">Call</string>
    <string name="action_reset">Reset</string>
    <string name="hello_world">Hello world!</string>

</resources>
