<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/label_width"
            android:layout_height="wrap_content"
            android:text="@string/name_label"/>

        <TextView
            android:id="@+id/name_input"
            android:layout_width="@dimen/input_width"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/label_width"
            android:layout_height="wrap_content"
            android:text="@string/phone_label"/>

        <TextView
            android:id="@+id/phone_input"
            android:layout_width="@dimen/input_width"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/label_width"
            android:layout_height="wrap_content"
            android:text="@string/email_label"/>

        <TextView
            android:id="@+id/email_input"
            android:layout_width="@dimen/input_width"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/label_width"
            android:layout_height="wrap_content"
            android:text="@string/adress_label"/>

        <TextView
            android:id="@+id/adress_input"
            android:layout_width="@dimen/input_width"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:id="@+id/call_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call_button"/>

</LinearLayout>
